if border-radius includes a var(), the value is not readable from .style https://bugs.webkit.org/show_bug.cgi?id=230389

Reviewed by Myles Maxfield.
Source/WebCore:

Return correct string for shorthand CSS values set by var. Add extra checks for if all
longhand properties are pending values and if the requested shorthand property was set
to a variable.

Test: css3/short-hand-var-serialization.html

* css/StyleProperties.cpp:
(WebCore::StyleProperties::getPropertyValue const):

LayoutTests:

* css3/short-hand-var-serialization-expected.txt: Added.
* css3/short-hand-var-serialization.html: Added.



Canonical link: https://commits.webkit.org/243659@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285015 268f45cc-cd09-0410-ab3c-d52691b4dbfc